applications/openeuler-man-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-man-website
  name: openeuler-man-website
