applications/openeuler-man-website/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: website-ingress
  namespace: openeuler-man-website
spec:
  rules:
  - host: man.openeuler.org
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - man.openeuler.org
    secretName: website-tls
